--- a/bucket-creation.yaml
+++ b/bucket-creation.yaml
@@ -8,7 +8,7 @@ Resources:
     Type: AWS::S3::Bucket
     Description: Creating Amazon S3 bucket from CloudFormation
     Properties:
-      BucketName: MyHardCodedBucket
+      BucketName: MyHardCodedBucket-3-5-2022
       
     
 Outputs:
