--- a/.github/workflows/github-actions-ec2.yml
+++ b/.github/workflows/github-actions-ec2.yml
@@ -1,4 +1,4 @@
-name: Push-to-EC2
+name: Deploy on Push to Master
 
 # Trigger deployment only on push to master branch
 on:
@@ -8,16 +8,18 @@ on:
 
 jobs:
   deploy:
-    name: Deploy to EC2 on master branch push
+    name: Deploy cloudformation stack on master branch push
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout the files
         uses: actions/checkout@v2
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v1
 
       # - name: Deploy to Server 1
       #   uses: easingthemes/ssh-deploy@main
-        env:
+        with:
           # SSH_PRIVATE_KEY: ${{ secrets.EC2_SSH_KEY }}
           # REMOTE_HOST: ${{ secrets.HOST_DNS }}
           # REMOTE_USER: ${{ secrets.USERNAME }}
@@ -25,3 +27,9 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_REGION: ${{ secrets.AWS_REGION }}
+      - name: Deploy to AWS cloudformation
+        uses: aws-actions/aws-cloudformation-github-deploy@v1
+        with:
+          name: s3-bucket-stack
+          template: bucket-creation.yaml
+          no-fail-on-empty-changeset: "1"
