--- a/bucket-creation.yaml
+++ b/bucket-creation.yaml
@@ -3,12 +3,12 @@ Description: CloudFormation template for S3 bucket
     
 Resources:
     
-  S3Bucket:
-    # DeletionPolicy: Retain
-    Type: AWS::S3::Bucket
-    Description: Creating Amazon S3 bucket from CloudFormation
-    Properties:
-      BucketName: badger-3-5-2023
+  # S3Bucket:
+  #   # DeletionPolicy: Retain
+  #   Type: AWS::S3::Bucket
+  #   Description: Creating Amazon S3 bucket from CloudFormation
+  #   Properties:
+  #     BucketName: badger-3-5-2023
       
     
 Outputs:
