--- a/bucket-creation.yaml
+++ b/bucket-creation.yaml
@@ -1,7 +1,7 @@
-AWSTemplateFormatVersion: 2010-09-09
-Description: CloudFormation template for S3 bucket 
+# AWSTemplateFormatVersion: 2010-09-09
+# Description: CloudFormation template for S3 bucket 
     
-Resources:
+# Resources:
     
   # S3Bucket:
   #   # DeletionPolicy: Retain
@@ -11,7 +11,7 @@ Resources:
   #     BucketName: badger-3-5-2023
       
     
-Outputs:
-  S3Bucket:
-    Description: Bucket Created using this bucket template.
-    Value: !Ref S3Bucket
+# Outputs:
+#   S3Bucket:
+#     Description: Bucket Created using this bucket template.
+#     Value: !Ref S3Bucket
