--- a/bucket-creation.yaml
+++ b/bucket-creation.yaml
@@ -1,17 +1,17 @@
-# AWSTemplateFormatVersion: 2010-09-09
-# Description: CloudFormation template for S3 bucket 
+AWSTemplateFormatVersion: 2010-09-09
+Description: CloudFormation template for S3 bucket 
     
-# Resources:
+Resources:
     
-  # S3Bucket:
-  #   # DeletionPolicy: Retain
-  #   Type: AWS::S3::Bucket
-  #   Description: Creating Amazon S3 bucket from CloudFormation
-  #   Properties:
-  #     BucketName: badger-3-5-2023
+  S3Bucket:
+    # DeletionPolicy: Retain
+    Type: AWS::S3::Bucket
+    Description: Creating Amazon S3 bucket from CloudFormation
+    Properties:
+      BucketName: badger-3-5-2023
       
     
-# Outputs:
-#   S3Bucket:
-#     Description: Bucket Created using this bucket template.
-#     Value: !Ref S3Bucket
+Outputs:
+  S3Bucket:
+    Description: Bucket Created using this bucket template.
+    Value: !Ref S3Bucket
