--- a/bucket-creation.yaml
+++ b/bucket-creation.yaml
@@ -1,5 +1,5 @@
 AWSTemplateFormatVersion: 2010-09-09
-Description: CloudFormation template for S3 bucket 
+Description: CloudFormation template for S3 buckets
     
 Resources:
     
